sort.pancake.GatesPancake.scala.error
Erreur de compilation :
GatesPancake:8: error: type mismatch;
 found   : Unit
 required: Int
    tplus1 = trouverTPlus1(t)
                          ^GatesPancake:9: error: type mismatch;
 found   : Unit
 required: Int
    tmoins1 = trouverTMoins1(t)
                            ^GatesPancake:19: error: Boolean.type does not take parameters
def estLibre(rang:Int) = Boolean{
                                ^GatesPancake:32: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    if (getRayonCrepe(i) == t+1){return i}
                                        ^GatesPancake:32: warning: enclosing method trouverTPlus1 has result type Unit: return value discarded
    if (getRayonCrepe(i) == t+1){return i}
                                 ^GatesPancake:34: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return 9999
         ^GatesPancake:34: warning: enclosing method trouverTPlus1 has result type Unit: return value discarded
  return 9999
  ^GatesPancake:39: error: not found: value tp
  for (i <- tp getTaillePile()-1){
            ^GatesPancake:39: error: value - is not a member of Unit
  for (i <- tp getTaillePile()-1){
                              ^GatesPancake:40: warning: enclosing method trouverTMoins1 has result type Unit: return value discarded
    if (getRayonCrepe(i) == t-1){return i}
                                 ^GatesPancake:42: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return 9999
         ^GatesPancake:42: warning: enclosing method trouverTMoins1 has result type Unit: return value discarded
  return 9999
  ^GatesPancake:91: error: method casG is defined twice
  conflicting symbols both originated in file 'plm.runtime93.GatesPancake'
def casG():Boolean{
    ^GatesPancake:75: error: method casE is defined twice
  conflicting symbols both originated in file 'plm.runtime93.GatesPancake'
def casE():Boolean{
    ^